--- a/bootstrap307USER.css
+++ b/bootstrap307USER.css
@@ -1,65 +1,67 @@
-.button{
-    width: 200px;
-    height: 50px;
-    background-color: #647ff5;
-    color: #FFFFFF;
-    padding: 10px;
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    margin:10px
-}
-
-#shadow1 {
-display: flex;
-    justify-content: space-around
-    width : 600px;
-    height: 600px;
-    border: 5px solid;
-    padding: 10px;
-    box-shadow: 5px 10px #647ff5;
-    font-size: large
-  }
-
-
-div.b {
-  word-wrap: break-word;
+.button {
+  width: 200px;
+  height: 50px;
+  background-color: #647ff5;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  margin: 10px;
 }
 
 .boxes {
-    margin-inline-start: auto;
-    flex-flow: column;
-    border: 5px solid;
-    display: flex;
-    width: 850px;
-    height: 150px;
-    text-align:center;
-    font-size: 50px;
+  margin-inline-start: auto;
+  flex-flow: column;
+  border: 5px solid;
+  display: flex;
+  width: 850px;
+  height: 150px;
+  text-align: center;
+  font-size: 50px;
 }
 
+/* Shadow box */
 #shadow1 {
-            width: 400px;
-            height: 600px;
-            border: 1px solid;
-            padding: 10px;
-            box-shadow: 5px 10px #647ff5;
-            font-size: large; 
+  width: 400px;
+  height: 600px;
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px #647ff5;
+  font-size: large;
 }
-.card-body {
-border: 1px solid black;
-                    width: 300px;
-                   }
-                   .img-container img {
-                    max-width: 100%;
-                    height: auto;
-                   }
-                   .card-body p, .card-body h1 {
-                    margin: 8px;
-                   }
- 
-                   blockquote {
-                    padding: 20px;
-                    box-shadow:
-                      inset 0 -3em 3em rgb(0 200 0 / 30%),
-                      0 0 0 2px white,
-                      0.3em 0.3em 1em rgb(200 0 0 / 60%)
+
+#blockquote1 {
+  flex-direction: row;
+  width: 100%;
+  padding: 20px;
+  box-shadow: inset 0 -3em 3em #3f5ff04d, 0 0 0 2px white,
+    0.3em 0.3em 1em rgba(228, 110, 110, 0.6);
+}
+
+/* USER IMG - PAGE 1 */
+#Name {
+  flex-direction: row;
+  width: 100%;
+  padding: 20px;
+  box-shadow: inset 0 -3em 3em #3f5ff04d, 0 0 0 2px white,
+    0.3em 0.3em 1em rgba(228, 110, 110, 0.6);
+}
+
+div {
+width: auto;
+text-align: center;
+padding: 15px;
+border: 3px solid rgb(240, 233, 233);
+}
+img {  
+  max-width: 100%;  
+  height: auto;  
+  } 
+
+#d-grid gap-2 {
+width: auto;
+text-align: center;
+padding: 15px;
+border: 3px solid rgb(240, 233, 233);
+  }
